--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,31 +1,78 @@
-
-body { margin: 0;
-    background-color: rgb(120, 117, 117);
+body {
+  margin: 0;
+  background-color: rgb(0, 0, 0);
 }
 
-header { 
-    background-color: #e7e5e5c9; 
+header {
+  background-color: #212121;
   align-items: center;
-  opacity: 90%;
-  height: 50px;
-display: flex;
-padding-left: 30px;
-  
+  display: flex;
+  justify-content: space-between;
 }
 
-header nav a {  text-decoration: none;
-    color: #696969;
-    margin: 0 20px;
-    display: inline-block;
-    padding: 3px 3px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;}
-    
-nav{margin: 0 auto;}
-    
+header nav a {
+  text-decoration: none;
+  color: #696969;
+  font-family: "Mohave", sans-serif;
+  margin: 20px;
+  padding: 3px;
+}
 
+header nav a:hover {
+  background-color: #000;
+  border-radius: 15px;
+}
 
- header nav a:hover { background-color: rgb(0, 0, 0);
-    border-radius: 15px;
-    
+.logo {
+  color: rgb(255, 255, 255);
+  font-family: "Mohave", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  padding: 5px;
+  line-height: 0.85;
+  border: 2px solid #fff;
+}
+
+header nav a {
+  color: rgb(230, 217, 217);
+}
+
+div p {
+  color: white;
+}
+/* DISEÑO RESPONSIVE INICIO CELULAR */
+
+@media screen and (max-width: 400px) {
+  header nav a {
+    margin: 2px;
+    padding-right: 10px;
+    justify-content: none;
+    font-size: small;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .logo {
+    margin-left: 10px;
+  }
+}
+
+/* DISEÑO RESPOSIVE INICIO TABLET */
+
+@media screen and (max-width: 770px) {
+  header nav a {
+    margin: 2px;
+    padding-right: 10px;
+    justify-content: none;
+    font-size: medium;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .logo {
+    margin-left: 10px;
+  }
 }
