--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,76 +1,127 @@
-
-body { margin: 0;
-    background-color: #000000;
+body {
+  margin: 0;
+  background-color: #000000;
 }
 
-header { 
-    background-color: #212121; 
+header {
+  background-color: #212121;
   align-items: center;
-  height: 50px;
-display: flex;
+  display: flex;
+  justify-content: space-between;
 }
 
-header nav a {  text-decoration: none;
-    color: #000000;
-    margin: 020px;
-    padding: 3px 3px;
-    font-family: 'Mohave', sans-serif;
-    text-align: center;}
-    
-nav{margin: 0 auto;}
-    
-
-
- header nav a:hover { background-color: rgb(74, 73, 73);
-    border-radius: 15px;
-    
+header nav a {
+  text-decoration: none;
+  color: rgb(230, 217, 217);
+  font-family: "Mohave", sans-serif;
+  margin: 20px;
+  padding: 3px;
 }
 
-.logo2 { color: rgb(250, 250, 250);
-    font-family: 'Mohave', sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    margin-top: 12px;
-    margin-left: 5px; 
-    line-height: 1;
-  }
-
-
-.cortesdepelo { color: rgb(0, 0, 0);
-    text-align: center;
-    font-family: sans-serif;
-    border-radius: 52px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    
+header nav a:hover {
+  background-color: #000;
+  border-radius: 15px;
 }
 
-div img { width: 230px;
-    height: 230px;
-   border-radius: 4px;
-   
+.logo {
+  color: rgb(255, 255, 255);
+  font-family: "Mohave", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  padding: 5px;
+  line-height: 0.85;
+  border: 2px solid #fff;
 }
 
-.todaslasfotos {display: grid;
-    grid-template-columns:repeat(5, 230px);
-    grid-template-rows: repeat(2 2fr);
-    column-gap: 40px;
-    row-gap: 10px;
-  justify-content: center;
- 
+.cortesdepelo {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-family: sans-serif;
+  border-radius: 52px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 div img {
-    opacity: 0.7;
-    transition:all 1s;
+  width: 130px;
+  height: 130px;
+  border-radius: 4px;
+  opacity: 0.7;
+  transition: all 0.8s;
 }
 
-
-
-.todaslasfotos  :hover {
-    transform: scale(1.1);
-     opacity: 1.1;
-    
+.todaslasfotos {
+  display: grid;
+  grid-template-columns: repeat(5, 230px);
+  grid-template-rows: repeat(2, 230px);
+  column-gap: 30px;
+  row-gap: 10px;
+  justify-content: center;
+  margin-top: 50px;
+}
+.todaslasfotos img {
+  width: 100%;
+  height: 100%;
 }
 
+.todaslasfotos :hover {
+  transform: scale(1.1);
+  opacity: 1.1;
+}
 
+/*  DISEÑO RESPONSIVE CELULAR */
+
+@media screen and (max-width: 400px) {
+  header nav a {
+    margin: 2px;
+    padding-right: 10px;
+    justify-content: none;
+    font-size: small;
+  }
+
+  .todaslasfotos {
+    border-radius: 2px;
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    grid-template-rows: repeat(6, 150px);
+    row-gap: 10px;
+    column-gap: 15px;
+    margin-top: 20px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .logo {
+    margin-left: 10px;
+  }
+}
+
+/* DISEÑO RESPOSIVE INICIO TABLET */
+
+@media screen and (max-width: 770px) {
+  header nav a {
+    margin: 2px;
+    padding-right: 10px;
+    justify-content: none;
+    font-size: medium;
+  }
+}
+
+@media screen and (max-width: 770) {
+  .todaslasfotos {
+    border-radius: 2px;
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    grid-template-rows: repeat(5, 200px);
+    row-gap: 20px;
+    column-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .logo {
+    margin-left: 10px;
+  }
+}
