--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,106 @@
-
- body { margin: 0;
-  background-color: #000;
+body {
+  margin: 0;
+  background: #000;
 }
 
-div img { width: 1370px;
-  height: 574px; 
-}  
+.contenedor {
+  width: 100%;
+  height: 574px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(inicio2.jpg);
+  background-size: cover;
+  background-position: center;
+}
 
+.letra {
+  color: rgb(0, 0, 0);
+  line-height: 0.9;
+}
 
-header { 
-    background-color: #212121; 
+.since {
+  font-family: Asap Condensed;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.niko {
+  font-family: Righteous;
+  font-size: 100px;
+}
+
+.barber {
+  font-family: Asap Condensed;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+header {
+  background-color: #212121;
   align-items: center;
   display: flex;
-justify-content: space-between;
+  justify-content: space-between;
 }
 
-
- header nav a  { text-decoration: none;
-    color: #696969;     
-    font-family:'Mohave', sans-serif;  
-    margin: 20px;
-    padding:  3px;
-}
-    
-    
- header nav a:hover { background-color: #000;
-    border-radius: 15px;
-    
+header nav a {
+  text-decoration: none;
+  color: rgb(230, 217, 217);
+  font-family: "Mohave", sans-serif;
+  margin: 20px;
+  padding: 3px;
 }
 
-.logo { color: rgb(255, 255, 255);
-    font-family: 'Mohave', sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-      margin-top: 5px;
-    margin-left: 10px;
-    margin-bottom: 5px; 
-    padding: 5px;
-    line-height: 0.85;
-    border: 2px solid #fff;
-  }
+header nav a:hover {
+  background-color: #000;
+  border-radius: 15px;
+}
 
+.logo {
+  color: rgb(255, 255, 255);
+  font-family: "Mohave", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  padding: 5px;
+  line-height: 0.85;
+  border: 2px solid #fff;
+}
 
-/* DISEÑO RESPONSIVE INICIO */
+/* DISEÑO RESPONSIVE INICIO CELULAR */
 
-@media screen and (max-width: 400px) 
- {header nav a 
-  { margin:2px;
+@media screen and (max-width: 400px) {
+  header nav a {
+    margin: 2px;
     padding-right: 10px;
     justify-content: none;
-    font-size: small; }
- }
+    font-size: small;
+  }
+}
 
- @media screen and (max-width: 400px) 
- { .logo
-  { margin-left: 10px;}
- }
+@media screen and (max-width: 400px) {
+  .logo {
+    margin-left: 10px;
+  }
+}
 
+/* DISEÑO RESPOSIVE INICIO TABLET */
 
+@media screen and (max-width: 770px) {
+  header nav a {
+    margin: 2px;
+    padding-right: 10px;
+    justify-content: none;
+    font-size: medium;
+  }
+}
 
+@media screen and (max-width: 770px) {
+  .logo {
+    margin-left: 10px;
+  }
+}
