--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 body {
   margin: 0;
-  background-color: black; }
+  background-color: black;
+}
 
 .contenedor {
   width: 100%;
@@ -11,42 +12,50 @@ body {
   justify-content: center;
   background-image: url(inicio2.jpg);
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+}
 
 .letra {
   color: black;
-  line-height: 0.9; }
+  line-height: 0.9;
+}
 
 .since {
   font-family: Asap Condensed;
   font-size: 20px;
   text-align: center;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .niko {
   font-family: Righteous;
-  font-size: 100px; }
+  font-size: 100px;
+}
 
 .barber {
   font-family: Asap Condensed;
   font-size: 20px;
   text-align: center;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 header {
   background-color: #212121;
   align-items: center;
   display: flex;
-  justify-content: space-between; }
-  header nav a {
-    text-decoration: none;
-    color: #e6d9d9;
-    font-family: "Mohave", sans-serif;
-    margin: 20px;
-    padding: 3px; }
-  header nav a:hover {
-    background-color: #000;
-    border-radius: 15px; }
+  justify-content: space-between;
+}
+header nav a {
+  text-decoration: none;
+  color: #e6d9d9;
+  font-family: "Mohave", sans-serif;
+  margin: 20px;
+  padding: 3px;
+}
+header nav a:hover {
+  background-color: #000;
+  border-radius: 15px;
+}
 
 .logo {
   color: white;
@@ -58,7 +67,8 @@ header {
   margin-bottom: 5px;
   padding: 5px;
   line-height: 0.85;
-  border: 2px solid #fff; }
+  border: 2px solid #fff;
+}
 
 /* DISEÑO RESPONSIVE INICIO CELULAR */
 @media screen and (max-width: 770px) {
@@ -66,11 +76,15 @@ header {
     margin: 2px;
     padding-right: 10px;
     justify-content: none;
-    font-size: medium; } }
+    font-size: medium;
+  }
+}
 
 @media screen and (max-width: 400px) {
   .logo {
-    margin-left: 10px; } }
+    margin-left: 10px;
+  }
+}
 
 /* DISEÑO RESPOSIVE INICIO TABLET */
 @media screen and (max-width: 770px) {
@@ -78,8 +92,12 @@ header {
     margin: 2px;
     padding-right: 10px;
     justify-content: none;
-    font-size: medium; } }
+    font-size: medium;
+  }
+}
 
 @media screen and (max-width: 770px) {
   .logo {
-    margin-left: 10px; } }
+    margin-left: 10px;
+  }
+}
