--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,42 +3,6 @@ body {
   margin: 0;
   background-color: black;
 }
-
-.contenedor {
-  width: 100%;
-  height: 574px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-image: url(inicio2.jpg);
-  background-size: cover;
-  background-position: center;
-}
-
-.letra {
-  color: black;
-  line-height: 0.9;
-}
-
-.since {
-  font-family: Asap Condensed;
-  font-size: 20px;
-  text-align: center;
-  font-weight: bold;
-}
-
-.niko {
-  font-family: Righteous;
-  font-size: 100px;
-}
-
-.barber {
-  font-family: Asap Condensed;
-  font-size: 20px;
-  text-align: center;
-  font-weight: bold;
-}
-
 header {
   background-color: #212121;
   align-items: center;
@@ -68,6 +32,60 @@ header nav a:hover {
   padding: 5px;
   line-height: 0.85;
   border: 2px solid #fff;
+}
+.foto {
+  width: 100%;
+  height: 500px;
+  background-image: url(inicio2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.contenedor {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.contenedor .letra {
+  justify-content: center;
+  text-align: center;
+  transform: translateY(80%);
+  margin-left: 40px;
+}
+
+.letra {
+  color: white;
+  line-height: 0.9;
+}
+
+.since {
+  font-family: Asap Condensed;
+  font-size: 20px;
+  text-align: start;
+  font-weight: bold;
+  display: flex;
+  margin-left: 10px;
+}
+
+.niko {
+  font-family: Righteous;
+  font-size: 100px;
+  margin-left: 10px;
+}
+
+.barber {
+  font-family: Asap Condensed;
+  font-size: 20px;
+  /* text-align: center; */
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.contacto {
+  color: white;
+  text-align: center;
+  margin-top: 10px;
 }
 
 /* DISEÑO RESPONSIVE INICIO CELULAR */
