--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
   background-color: rgb(0, 0, 0);
+  height: 1300px;
 }
 
 header {
   background-color: #212121;
+  background-image: url(fondo-ubicacion.jpg);
   align-items: center;
   display: flex;
   justify-content: space-between;
@@ -12,19 +14,19 @@ header {
 
 header nav a {
   text-decoration: none;
-  color: #696969;
+  color: #000;
   font-family: "Mohave", sans-serif;
   margin: 20px;
   padding: 3px;
 }
 
 header nav a:hover {
-  background-color: #000;
+  background-color: rgb(221, 221, 221);
   border-radius: 15px;
 }
 
 .logo {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-family: "Mohave", sans-serif;
   font-size: 20px;
   font-weight: bold;
@@ -33,19 +35,74 @@ header nav a:hover {
   margin-bottom: 5px;
   padding: 5px;
   line-height: 0.85;
-  border: 2px solid #fff;
+  border: 2px solid #000;
 }
-
-header nav a {
-  color: rgb(230, 217, 217);
-}
-
-.cartas {
+.contenedor-ubicacion-fondo {
+  width: 100%;
+  height: 100vh;
+  background-image: url(fondo-ubicacion.jpg);
+  background-size: cover;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
 }
+
+.ubicacion-titulo {
+  text-align: center;
+  padding-bottom: 150px;
+  font-family: "Mohave", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.contenedor-segunda-parte img {
+  width: 400px;
+  height: 300px;
+}
+
+.contenedor-segunda-parte {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-around;
+  transform: translateY(50%);
+}
+.barberia-foto-segunda-parte {
+  transform: translateX(-25%);
+}
+
+.mapa-segunda-parte {
+  transform: translateX(25%);
+}
+
+.contenedor-texto-segunda-parte {
+}
+
+.donde-encontrarnos {
+  color: rgb(54, 54, 54);
+  font-family: "Mohave", sans-serif;
+  font-size: 20px;
+  text-align: center;
+  transform: translateY(-150px);
+}
+
+.palazzo {
+  color: white;
+  font-family: "Mohave", sans-serif;
+  font-size: 15px;
+  line-height: 1px;
+  text-align: center;
+  transform: translateY(-150px);
+}
+
+.calle {
+  color: white;
+  font-family: "Mohave", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  transform: translateY(-150px);
+}
+
 /* DISEÑO RESPONSIVE INICIO CELULAR */
 
 @media screen and (max-width: 400px) {
@@ -55,9 +112,25 @@ header nav a {
     justify-content: none;
     font-size: small;
   }
-}
+  .contenedor-segunda-parte img {
+    width: 300px;
+    height: 200px;
+  }
+  .contenedor-segunda-parte {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
 
-@media screen and (max-width: 400px) {
+  .barberia-foto-segunda-parte {
+    transform: translateY(-60%);
+  }
+  .mapa-segunda-parte {
+    transform: translateX(0%);
+  }
+  .contenedor-texto-segunda-parte {
+    transform: translateY(30px);
+  }
   .logo {
     margin-left: 10px;
   }
@@ -65,16 +138,37 @@ header nav a {
 
 /* DISEÑO RESPOSIVE INICIO TABLET */
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 870px) {
   header nav a {
     margin: 2px;
     padding-right: 10px;
     justify-content: none;
     font-size: medium;
   }
-}
+  .donde-encontrarnos {
+    color: rgb(54, 54, 54);
+    font-family: "Mohave", sans-serif;
+    font-size: 15px;
+    text-align: center;
+    transform: translateY(-150px);
+  }
 
-@media screen and (max-width: 770px) {
+  .palazzo {
+    color: white;
+    font-family: "Mohave", sans-serif;
+    font-size: 10px;
+    line-height: 1px;
+    text-align: center;
+    transform: translateY(-150px);
+  }
+
+  .calle {
+    color: white;
+    font-family: "Mohave", sans-serif;
+    font-size: 10px;
+    text-align: center;
+    transform: translateY(-150px);
+  }
   .logo {
     margin-left: 10px;
   }
